differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr80210-2.c-5.4.0-2.out.txt
pr80210-2.c:5:9: error: attribute(target("no-powerpc-gpopt")) is unknown
 #pragma GCC target "no-powerpc-gpopt"
         ^
